--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,5 +28,11 @@ server {
     proxy_pass http://app:3000/;
   }
 
+  location /ws/ {
+    proxy_pass http://broker:3000/;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+  }
   
 }
