--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
   root /var/www;
   listen 80;
+  listen 8000;
   gzip on;
   gzip_types text/plain application/xml text/css application/javascript;
   gzip_min_length 1000;
@@ -12,7 +13,7 @@ server {
     
     index index.html;
     autoindex on;
-    try_files /static/$uri $uri @nodeproxy;
+    try_files /static/$uri $uri.html /static/login.html;
     #proxy_pass http://client:3000/;
     
   }
@@ -29,9 +30,9 @@ server {
   }
 
   location /ws/ {
-    proxy_pass http://broker:3000/;
+    proxy_pass http://app:8000/;
     proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Upgrade websocket;
     proxy_set_header Connection "upgrade";
   }
   
