--- a/app/package.json
+++ b/app/package.json
@@ -4,13 +4,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
     "nodemon": "^3.0.1",
-    "pg": "^8.11.3",
-    "sequelize": "^6.33.0"
+    "ws": "^8.14.2",
+    "amqplib": "^0.10.3"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   }
 }
