--- a/broker/package.json
+++ b/broker/package.json
@@ -7,9 +7,10 @@
     "events": "^3.3.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "ws": "^8.14.2"
   },
-  "scripts":{
-    "start" : "nodemon index.js"
+  "scripts": {
+    "start": "node index.js"
   }
 }
