--- a/broker/package.json
+++ b/broker/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.0.3",
     "events": "^3.3.0",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1",
     "ws": "^8.14.2"
