--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -4,35 +4,31 @@ services:
   app:
     build:
       context: ./app
-    tty: true
     working_dir: /opt/server
     env_file:
       - .env
     expose:
       - '3000'
+      - '8000'
+    restart: always
     depends_on:
       - db
     command: npm run start
 
-  client:
-    build:
-      context: ./client
-    expose:
-      - '3000'
-    working_dir: /client
-    command: npm run dev
 
   # Контейнер с базой данных
   db:
-    image: postgres:12-alpine
+    image: mongo:6-jammy
+    ports:
+      - '27017:27017'
     environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-    volumes:
-      - ./postgres:/var/lib/postgresql/data
-    expose:
-      - '5432'
+        #MONGO_INITDB_ROOT_USERNAME: admin
+        #MONGO_INITDB_ROOT_PASSWORD: 1234
+        MONGO_INITDB_DATABASE: sites
     restart: always
+    volumes:
+      - dbdata:/data/db
+      #- ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
 
   # Контейнер с nginx
   nginx:
@@ -40,7 +36,7 @@ services:
     depends_on:
       - app
       - db
-      - pgadmin
+      - broker
     image: nginx:latest
     ports:
       - '80:80'
@@ -49,38 +45,36 @@ services:
       - ./static:/var/www/static
     restart: always
 
-  # Контейнер с pgadmin
-  pgadmin:
-    container_name: pgadmin
-    depends_on:
-      - db
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: info@proglib.io
-      PGADMIN_DEFAULT_PASSWORD: qwertyuiop
-    expose:
-      - '80'
-    restart: always
-
   rabbitmq:
     container_name: rabbitmq
     image:  rabbitmq:3.11-management
     ports:
       - "5672:5672"
       - "15672:15672"
-    networks:
-      - network
-  
+      
   broker:
     container_name: broker
     build: broker/
     working_dir:
       /usr/src/broker
     ports:
-      - "3001:3001"
+      - "3000:3000"
     depends_on:
       - rabbitmq
     command: npm run start
     restart: always
-    networks:
-      - network
+
+  parser:
+    container_name: parser
+    build: parser/
+    depends_on:
+      - rabbitmq
+    restart: always
+    command: sh -c '/parser/wait-for-it.sh rabbitmq:5672 --timeout=15 -- python3 /parser/consumer.py'
+  
+  
+volumes:
+  dbdata:
+
+networks:
+  network: {}
