--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,10 +30,10 @@ server {
   }
 
   location /ws/ {
-    proxy_pass http://app:8000/;
+    proxy_pass http://broker:8000/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade websocket;
-    proxy_set_header Connection "upgrade";
+    proxy_set_header Connection "Upgrade";
   }
   
 }
