--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,13 @@
+map $http_upgrade $type {
+  default "web";
+  websocket "ws";
+}
+upstream websocket {
+    server broker:8000;
+}
 server {
   root /var/www;
+  index login.html;
   listen 80;
   listen 8000;
   gzip on;
@@ -11,9 +19,8 @@ server {
 
   location / {
     
-    index index.html;
-    autoindex on;
-    try_files /static/$uri $uri.html /static/login.html;
+    index login.html;
+    try_files /static/$uri /static/login.html;
     #proxy_pass http://client:3000/;
     
   }
@@ -29,11 +36,16 @@ server {
     proxy_pass http://app:3000/;
   }
 
-  location /ws/ {
-    proxy_pass http://broker:8000/;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade websocket;
-    proxy_set_header Connection "Upgrade";
-  }
-  
+
+  location /websocket/ {
+        proxy_pass http://websocket;
+        
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_read_timeout     60;
+        proxy_connect_timeout  60;
+        proxy_redirect         off;
+    }
 }
