--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,8 +6,7 @@ upstream websocket {
     server broker:8000;
 }
 server {
-  root /var/www;
-  index login.html;
+  root /var/www/static;
   listen 80;
   listen 8000;
   gzip on;
@@ -19,8 +18,8 @@ server {
 
   location / {
     
-    index login.html;
-    try_files /static/$uri /static/login.html;
+    index /index.html;
+    try_files $uri $uri.html $uri/ =404;
     #proxy_pass http://client:3000/;
     
   }
